For the Housing, Jobs, and Events, can you please hide the filter options but do not delete just hide for now- we may need them for future use

--- a/css/style.css
+++ b/css/style.css
@@ -699,6 +699,8 @@ h2.resp-accordion {
 	display: inline-block;
 }
 .side-bar-left {
+  /* If wanna show the navbar, eliminate the display property altogether */
+  display: none !important;
 	width: 184px;
 	float: left;
 	border: 1px solid #ccccc8;
