--- a/application/views/forum/community-forums1.html
+++ b/application/views/forum/community-forums1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Jewish-Classified</title>
+<title>YidTown</title>
 <link rel="stylesheet" href="css/style.css">
 <!--[if lt IE 9]>
 <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -203,7 +203,7 @@
 </div>
 
 <aside class="side-bar-right">
- <h2>Jewish Community Announcements</h2>
+ <h2>YidTown Community Announcements</h2>
  <ul>
      <li>1 day ago<a href="#">Join Our Community Celebration!</a></li>
      <li>08 Apr, 2015<a href="#">Check Out Etsy's Redesigned 
@@ -229,7 +229,7 @@ Seller Handbook!</a></li>
 <footer>
 <div class="container">
  <ul>
-      <li>© 2015 Jewish classified site.</li>
+      <li>© 2015 YidTown classified site.</li>
       <li><a href="#">help</a></li>
       <li><a href="#">safety privacy</a></li>
       <li><a href="#">feedback</a></li>
